--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://dolphy-commercial-two.vercel.app/embedded-site/ontario/filter/sale" style="position:relative; position:sticky; top:0; width: 100dvw; min-height:100dvh; border:none" scrolling="yes">
+    <iframe src="https://dolphy-commercial-two.vercel.app/embedded-site/ontario" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0;" scrolling="yes">
 </body>
 </html>
